# 202Lol

./: .black  .gitignore  .mypy.ini  .replit  .safety-project.ini  .whitesource  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  file.txt  main.py  pyproject.toml  requirements.txt  robots.txt  setup.cfg  test_main.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  support.yml
.github/workflows/: auto-response.yml  bandit.yml  black-duck-security-scan-ci.yml  cache-cleanup.yml  changelog-generator.yml  codacy.yml  code-review.yml  cycle-images.yml  first-contribution.yml  linting.yml  mend-releases.yml  python-tests.yml  safety.yml  security.yml  stale.yml  tests.yml
reports/: file.txt
tests/: test_checker.py  test_main.py  test_minor.py  test_poke.py
