[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
